--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Game: Connect Four</title>
 	<!-- jquery cdn -->
-	<script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
+	</script>
 	<!-- bootstrap cdn -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- my font -->
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<!-- my css -->
-	<link rel="stylesheet" type="text/css" href="disp.css">
+	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
 	<div class="container text-center">
@@ -75,7 +76,7 @@
 			</tr>
 		</table>
 	</div>
-	<script src="disp.js">
+	<script src="logic.js">
 	</script>
 	<div class="jumbotron" style="margin-top: 20px;padding-bottom: 16px;padding-top: 16px;background:white;">
 		<div class="container">
