--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
 	<title>Game: Connect Four</title>
 	<!-- jquery cdn -->
-	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
-	</script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<!-- bootstrap cdn -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<!-- my font -->
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<!-- my css -->
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
+	 <div class="alert alert-info alert-dismissible fade show">
+	    <button type="button" class="close" data-dismiss="alert">&times;</button>
+	    <strong>Info!</strong> This is new realease of the game site, Ver1.1
+	  </div>
 	<div class="container text-center">
 		<h1>Welcome to Connect Four</h1>
 		<h2>The object of the game is to connect four of your chips in a row!</h2>
